# trashdns

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs
src/queries/: a.rs  aaaa.rs  cname.rs  mod.rs  ns.rs
src/server/: mod.rs  recursive_resolver.rs  request_handler.rs  server.rs
