cargo-features = ["edition2021"]

[package]
name = "trashdns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns = "0.22.1"
trust-dns-proto = "0.22.0"
trust-dns-resolver = "0.22.0"
trust-dns-server = "0.22.1"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.68"